--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,13 @@
 {
-    "git": {
-      "enabled": false
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
+  ],
+  "git": {
+    "deploymentEnabled": {
+      "master": false
     }
   }
+}
