--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:icons": "npx tsx ./build-icons.mts"
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
@@ -22,11 +23,15 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "fs-extra": "^11.3.0",
+    "glob": "^11.0.3",
+    "node-html-parser": "^7.0.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
