--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "build:icons": "npx tsx ./build-icons.mts"
+    "build:icons": "npx tsx ./build-icons.mts",
+    "postbuild": "npx tsx scripts/generate-sitemap.ts"
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
     "next": "15.3.1",
     "next-intl": "^4.1.0",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
